# Chromatic-Sort

./: .gitignore  CMakeLists.txt  Makefile  README  README.md
lib/: Comparator.cpp  Coordinate.cpp  Coordinate.hpp  Matcher.cpp  PixelSort.cpp  PixelSort.hpp
lib/driver/: MagickDriver.cpp  MagickDriver.hpp  QImageDriver.cpp  QImageDriver.hpp
runner/: PixelSortApp.cpp  PixelSortApp.hpp  PixelSortOptions.cpp  PixelSortOptions.hpp  interactive.cpp
runners/: interactive.cpp  test.cpp  test2.cpp  testAS.cpp  testGif.cpp  testPS.cpp
src/: ColorMatcher.cpp  ColorMatcher.hpp  ColorTransformer.cpp  ColorTransformer.hpp  Comparator.cpp  Comparator.hpp  Coordinate.cpp  Coordinate.hpp  Matcher.cpp  Matcher.hpp  PixelSort.cpp  PixelSort.hpp  PixelSorter.cpp  PixelSorter.hpp  test.cpp
src/core/: Comparator.cpp  Comparator.hpp  Coordinate.cpp  Coordinate.hpp  Image.hpp  Matcher.cpp  Matcher.hpp  PixelSort.cpp  PixelSort.hpp
src/core/driver/: InMemDriver.cpp  InMemDriver.hpp  MagickDriver.cpp  QImageDriver.cpp  QImageDriver.hpp
src/gui-qt/: PixelSortApp.cpp  PixelSortApp.hpp  PixelSortOptions.cpp  PixelSortOptions.hpp  interactive.cpp
test/: .testSetup.cpp.swp  testSetup.cpp
test/core/: testCoordinate.cpp
test/core/driver/: testInMemDriver.cpp
